tools/tests/errors/surf_arity_14.experr
len() takes at most 1 positional argument(s) but 2 given
